--- a/src/components/Technology/technology.scss
+++ b/src/components/Technology/technology.scss
@@ -8,6 +8,7 @@
     height: 100vh;
     padding-left: 6rem;
     background-image: url('../../../public/assets/technology/background-technology-desktop.jpg');
+    background-size:cover;
     @media(max-width:768px){
         background-image: url('../../../public/assets/technology/background-technology-tablet.jpg');
         padding-left: 0;
@@ -19,7 +20,7 @@
     &__h5 {
         text-align: left;
         width: 100%;
-        margin-top: 10rem;
+        margin-top: 8rem;
         color:vars.$mainColor;
         font-size: 32px;
         font-family: 'Barlow Condensed', sans-serif;
@@ -37,13 +38,13 @@
     }
     &__infos {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        align-items: center;
         @media(max-width:768px){
             flex-direction: column-reverse;
         }
         &__container {
             display: flex;
-            align-content: center;
             align-items: center;
             @media(max-width:768px){
                 flex-direction: column;
@@ -56,7 +57,7 @@
                 width: 80px;
                 @media(max-width:768px){
                     flex-direction: row;
-                    width: 30%;
+                    width: 40%;
                     height: fit-content;
                     margin: 2rem 0 ;
                 }
@@ -144,15 +145,9 @@
             width: fit-content;
             height: fit-content;
             text-align: right;
-            @media(max-width:768px){
-            //  width: 100%;
-            }
-            @media(max-width:650px){
-                object-fit: cover;
-            }
+            
             &--pic {
-                width: 100%;
-                object-fit: scale-down;
+
                 @media(max-width:650px){
                     width: 100%;
                     height: 100%;
@@ -160,12 +155,10 @@
             }
         }
     }
-    
 }
 
 .activeTec {
     color: black;
     background-color: vars.$mainColor;
     border: none;
-
 }
