--- a/src/App.scss
+++ b/src/App.scss
@@ -2,13 +2,18 @@
 @use './styles/vars';
 
 .App {
+  display: flex;
+  justify-content: center;
   text-align: center;
   background-color: vars.$mainBackground;
   color: vars.$mainColor;
-  height: 100vh;
+  // height: 100vh;
+  width: 100%;
 }
 
-
+.main {
+  // display: flex;
+}
 // @media (prefers-reduced-motion: no-preference) {
 //   .App-logo {
 //     animation: App-logo-spin infinite 20s linear;
