--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -87,7 +87,6 @@
         &--name {
             font-size: 100px;
             text-align: left;
-            
             @media(max-width:650px){
                 font-size: 4* vars.$gutter;
                 margin-bottom: vars.$gutter;
@@ -103,7 +102,13 @@
             font-size: 24px;
             text-transform: capitalize;
             text-align: left;
+            @media(max-width:650px){
+                text-align: center;
+                padding-left: 5% ;
+                padding-right: 5% ;
+            }
         }
+        
         &__travel {
             display: flex;
             justify-content: space-between;
