--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -6,6 +6,7 @@
     justify-content: space-around;
     align-items: flex-end;
     height: 100vh;
+    width: 100vw;
     background-image: url("../../assets/home/background-home-desktop.jpg");
     background-size:cover;
     font-family: 'Bellefair', serif;
@@ -16,10 +17,11 @@
         background-image: url("../../assets/home/background-home-tablet.jpg");
         background-size:cover;
     }
-    
+    @media(max-width:650px){
+        background-image: url("../../assets/home/background-home-mobile.jpg");
+        width: 100vw;
+    }
     &__left {
-        padding: 2* vars.$gutter;
-        width: 35rem;
         height: 50%;
         margin-bottom:2* vars.$gutter;
         font-size: 28px;
@@ -30,8 +32,7 @@
         @media(max-width:768px){
             align-items: center;
             margin-top:5* vars.$gutter;
-            margin-bottom: 0;
-            width: 35rem;    
+            margin-bottom: 0;  
         }
         
         &__h5 {
