--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -23,6 +23,7 @@
     }
     &__left {
         height: 50%;
+        width: 50%;
         margin-bottom:2* vars.$gutter;
         font-size: 28px;
         display: flex;
@@ -32,7 +33,12 @@
         @media(max-width:768px){
             align-items: center;
             margin-top:5* vars.$gutter;
-            margin-bottom: 0;  
+            margin-bottom: 0; 
+            width: 80%;
+        }
+        @media(max-width:650px){
+            width: 90%;
+            margin-top: 8* vars.$gutter;
         }
         
         &__h5 {
