--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -16,6 +16,7 @@
     }
     @media(max-width:650px){
         background-image: url('../../../public/assets/destination/background-destination-mobile.jpg');
+        // height: 100vh;
     }
     &__view {
         display: flex;
