--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -97,6 +97,7 @@
         color: vars.$secondaryColor;
         background-color: none;
         margin-right: 2%;
+        flex-grow: 1;
       }
     }
     //ul
