--- a/src/components/Technology/technology.scss
+++ b/src/components/Technology/technology.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 100vh;
+    // height: 100vh;
     padding-left: 6rem;
     background-image: url('../../../public/assets/technology/background-technology-desktop.jpg') ;
     background-size:cover;
@@ -13,12 +13,12 @@
     @media(max-width:768px){
         background-image: url('../../../public/assets/technology/background-technology-tablet.jpg');
         padding-left: 0;
-        height: 100vh;
+        // height: 100vh;
         
     }
     @media(max-width:650px){
         background-image: url('../../../public/assets/technology/background-technology-mobile.jpg') ;
-        height: 100vh;
+        // height: 100vh;
         justify-content: center;
     }
     &__h5 {
@@ -38,6 +38,7 @@
         @media(max-width:650px){
             display: flex;
             justify-content: center;
+            margin-top: 7rem;
         }
     }
     &__infos {
@@ -149,7 +150,7 @@
             // width: 100%;
             height: fit-content;
             text-align: right;
-            border: 1px solid red;
+            // border: 1px solid red;
             @media(max-width:650px){
                 width: 100%;
                 // height: 100%;
