--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    height: 100vh;
+    // height: 100vh;
     width: 100vw;
     background-image: url("../../assets/home/background-home-desktop.jpg");
     background-size:cover;
@@ -20,7 +20,6 @@
     @media(max-width:650px){
         background-image: url("../../assets/home/background-home-mobile.jpg");
         width: auto;
-        height: 100vh;
     }
     &__left {
         height: 50%;
@@ -39,7 +38,7 @@
         }
         @media(max-width:650px){
             width: 90%;
-            margin-top: 8* vars.$gutter;
+            margin-top: 5* vars.$gutter;
         }
         
         &__h5 {
