--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 }
 
 .main {
-  // display: flex;
+  position: relative;
 }
 // @media (prefers-reduced-motion: no-preference) {
 //   .App-logo {
