--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -72,9 +72,9 @@
             color:grey;
             margin-bottom:  1rem ;
             font-size: 32px;
-            // @media(max-width:650px){
-
-            // }
+            @media(max-width:650px){
+                font-size: 25px
+            }
         }
         &__name {
             font-size: 2.2* vars.$gutter;
@@ -84,6 +84,9 @@
                 width: 100%;
                 margin-bottom: 0.5rem;
                 font-size: 36px
+            }
+            @media(max-width:650px){
+                font-size: 28px
             }
         }
         &__bio {
@@ -103,6 +106,8 @@
             }
             @media(max-width:650px){
                 padding:  1rem;
+                font-size: 18px;
+                padding: 0 2rem ;
             }
         }
         &__slider {
@@ -110,7 +115,8 @@
             width: 60%;
             @media(max-width:650px){
                 order:-1;
-                margin-bottom:2*  vars.$gutter;
+                margin-top: 1rem;
+                margin-bottom:1rem;
             }
             &--link {
             color: #383B4B;
@@ -134,23 +140,18 @@
             display: flex;
             justify-content: center;
             width: 95%;
-            // object-fit: scale-down;
         }
         @media(max-width:650px){
             border-bottom: 1px solid #383B4B;
-            margin-bottom: vars.$gutter;
+            margin-bottom: 0;
             // margin-top: 5rem;
             order:-4;
             height: auto;
             width: 90%;
-            // border: 1px solid salmon;
-            // background-color: aqua;
         }
         &--pic{
             @media(max-width:650px){
                 width: 100%;
-                // object-fit: scale-down;
-                // border: 1px solid salmon;
             }
         }
     }
