--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -89,8 +89,8 @@
             font-size: 100px;
             text-align: left;
             @media(max-width:650px){
-                font-size: 4* vars.$gutter;
-                margin-bottom: vars.$gutter;
+                font-size: 2.5* vars.$gutter;
+                margin-bottom: 1rem;
             }
         }
         &--desc {
@@ -105,8 +105,8 @@
             text-align: left;
             @media(max-width:650px){
                 text-align: center;
-                padding-left: 5% ;
-                padding-right: 5% ;
+                padding: 0 2rem 1rem;
+                font-size: 18px;
             }
         }
         
