--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    // height: 100vh;
+    height: 100vh;
     width: 100vw;
     background-image: url("../../assets/home/background-home-desktop.jpg");
     background-size:cover;
@@ -38,7 +38,8 @@
         }
         @media(max-width:650px){
             width: 90%;
-            margin-top: 5* vars.$gutter;
+            margin-top:6.5em;
+            height: fit-content;
         }
         
         &__h5 {
@@ -54,6 +55,7 @@
             }
             @media(max-width:650px){
                 font-size: 20px;
+                padding: 1rem 2rem 0;
             }
         }
         &__h1 {
