--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 code {
@@ -18,3 +19,6 @@ code {
 // #root {
 //   width: 100%;
 // }
+html {
+  height: -webkit-fill-available;
+}
