fix height mobile

--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -24,6 +24,7 @@
         
     @media(max-width:650px){
         width: fit-content;
+        height: 100vh;
         background-image: url('../../../public/assets/crew/background-crew-mobile.jpg');
     }
     
