--- a/src/components/Technology/technology.scss
+++ b/src/components/Technology/technology.scss
@@ -20,6 +20,7 @@
         justify-content: center;
         padding-bottom: 2rem;
         width: 100%;
+        height: 100vh;
         }
     &__h5 {
         text-align: left;
