--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -25,6 +25,7 @@
     @media(max-width:650px){
         width: fit-content;
         height: 100vh;
+        // height: auto;
         background-image: url('../../../public/assets/crew/background-crew-mobile.jpg');
     }
     
