fix tech map key unique

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
   text-align: center;
   background-color: vars.$mainBackground;
   color: vars.$mainColor;
-  // height: 100vh;
+  height: 100vh;
   width: 100%;
 }
 
