--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -24,8 +24,9 @@
         
     @media(max-width:650px){
         width: fit-content;
-        height: 100vh;
-        // height: auto;
+        height: initial;
+        padding-bottom: 3rem;
+        // height: fit-content;
         background-image: url('../../../public/assets/crew/background-crew-mobile.jpg');
     }
     
