--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -99,7 +99,7 @@
             margin-bottom: 0.5* vars.$gutter;
         }
         @media(max-width:650px){
-            padding-bottom: 2rem;
+            // padding-bottom: 2rem;
         }
         &:hover {
             border: 52px solid rgba(254, 252, 252, 0.1);
