--- a/src/components/Technology/technology.scss
+++ b/src/components/Technology/technology.scss
@@ -13,14 +13,14 @@
     @media(max-width:768px){
         background-image: url('../../../public/assets/technology/background-technology-tablet.jpg');
         padding-left: 0;
-        height: auto;
+        // height: 100vh;
     }
     @media(max-width:650px){
         background-image: url('../../../public/assets/technology/background-technology-mobile.jpg') ;
         justify-content: center;
         padding-bottom: 2rem;
         width: 100%;
-        height: 100vh;
+        // height: 100vh;
         }
     &__h5 {
         text-align: left;
