--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -16,11 +16,12 @@
         align-items: center;
         background-image: url("../../assets/home/background-home-tablet.jpg");
         background-size:cover;
+        // height: auto;
     }
     @media(max-width:650px){
         background-image: url("../../assets/home/background-home-mobile.jpg");
         width: auto;
-        height: 100vh;
+        // height: 100vh;
         background-size:cover;
 
     }
